--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -9,22 +9,25 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, message = FALSE}
+library(tidyverse)
+library(RMySQL)
+db <- dbConnect(MySQL(), 
+                host = "scidb.smith.edu", 
+                user = "mth292", 
+                password = "RememberPi", 
+                dbname = "imdb")
+knitr::opts_chunk$set(connection = db, max.print = 20)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{sql}
+SELECT n.name, mi.movie_id, n.gender, ci.role_id, mi.info
+FROM cast_info AS  ci
+INNER JOIN name AS n ON n.id = ci.person_id 
+INNER JOIN movie_info AS mi ON mi.movie_id = ci.movie_id
+WHERE ci.role_id = 8
+AND mi.info_type_id = 3
+GROUP BY ci.person_id
+LIMIT 20; 
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
