--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 library(tidyverse)
 library(RMySQL)
 db <- dbConnect(MySQL(), 
@@ -22,16 +22,15 @@ knitr::opts_chunk$set(connection = db, max.print = 20)
 
 
 ```{sql}
-SELECT n.name, mi1.movie_id, n.gender, ci.role_id, mi1.info, mi2.info
-FROM cast_info AS  ci
-INNER JOIN name AS n ON n.id = ci.person_id 
-INNER JOIN movie_info AS mi1 ON mi1.movie_id = ci.movie_id
-INNER JOIN movie_info AS mi2 ON mi2.movie_id = ci.movie_id
-WHERE ci.role_id = 8
-AND mi1.info_type_id = 3 
-AND mi2.info_type_id = 8 
-AND mi2.info LIKE '%USA%'
-GROUP BY ci.person_id
-LIMIT 200;
+SELECT t.production_year, mi.info AS genre, mi.movie_id, COUNT(mi2.movie_id) AS num_times
+FROM movie_info AS mi
+INNER JOIN title AS t ON t.id = mi.movie_id
+INNER JOIN movie_info AS mi2 ON mi2.movie_id = mi.movie_id
+WHERE t.production_year > 2000
+AND mi.info_type_id = 3
+AND mi.info_type_id = 3
+GROUP BY mi.movie_id
+;
 ```
+
 
