getting rid of categories. We should try to make multiple graphs with different genres together so that we can see changes. There is an obvious spike that we can see with shorts and comedy and documentary but I'm certain there are smaller dips and spikes tha twe can't see because of the big ones

--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -41,6 +41,13 @@ INNER JOIN title AS t ON t.id = mi.movie_id
 WHERE mi.info_type_id = 3
 AND t.production_year >= 1920
 AND t.production_year < 2010
+AND mi.info <> 'Short'
+AND mi.info <> 'Erotica'
+AND mi.info <> 'Experimental'
+AND mi.info <> 'Lifestyle'
+AND mi.info <> 'Sport'
+AND mi.info <> 'Talk-Show'
+AND mi.info <> 'News'
 GROUP BY floor(t.production_year/10) *  10, mi.info
 ORDER BY 1,2
 ;"
