--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -67,17 +67,18 @@ print(plot1)
 ```
 
 
-```{sql}
+```{r}
+sql2 <- "
 SELECT 
 	FLOOR(t.production_year/10) *  10 AS decade,
-	COALESCE(mi.info,"Other") AS genre, 
+	COALESCE(mi.info,'Other') AS genre, 
     SUM(CONVERT(
 			TRIM(
 				REPLACE(
 					REPLACE(
-						SUBSTRING_INDEX(mi2.info,"(USA)",1) -- split on "USA"
-						 ,"$","") -- close replace dollar sign with space
-                           , ",", "" ) -- close replace comma with space 
+						SUBSTRING_INDEX(mi2.info,'(USA)',1) -- split on 'USA'
+						 ,'$','') -- close replace dollar sign with space
+                           , ',', '') -- close replace comma with space 
                            ) -- close trim
                            , signed) -- close convert
 						) AS Amount -- close sum
@@ -86,16 +87,26 @@ INNER JOIN movie_info AS mi ON t.id = mi.movie_id
 INNER JOIN movie_info AS mi2 ON mi.movie_id = mi2.movie_id
 WHERE mi.info_type_id = 3
 AND mi2.info_type_id = 107
-AND SUBSTRING(mi2.info,1,1) = "$"
-AND mi2.info LIKE "%(USA)%"
+AND SUBSTRING(mi2.info,1,1) = '$'
+AND mi2.info LIKE '%(USA)%'
 AND t.production_year >= 1920
 AND t.production_year <= 2010
 GROUP BY FLOOR(t.production_year/10) *  10, mi.info
 ORDER BY 1,2
+;"
+
+db2 <- db %>%
+  dbGetQuery(sql2)
+
+print(db2)
 ```
 
-
-
-
+```{r, message = FALSE}
+plot2 <- ggplot(data = db2, aes(x = decade, y = Amount)) +
+  geom_line() +
+  facet_wrap(~genre) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+print(plot2)
+```
 
 
