--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -90,7 +90,7 @@ SELECT
                            , ',', '') -- close replace comma with space 
                            ) -- close trim
                            , signed) -- close convert
-						) AS Funding -- close sum
+						) AS gross_income -- close sum
 FROM title AS t
 INNER JOIN movie_info AS mi ON t.id = mi.movie_id
 INNER JOIN movie_info AS mi2 ON mi.movie_id = mi2.movie_id
@@ -100,6 +100,9 @@ AND SUBSTRING(mi2.info,1,1) = '$'
 AND mi2.info LIKE '%(USA)%'
 AND t.production_year >= 1920
 AND t.production_year <= 2010
+AND mi.info <> 'Reality-TV'
+AND mi.info <> 'News'
+AND mi.info <> 'Talk-Show'
 GROUP BY FLOOR(t.production_year/10) *  10, mi.info
 ORDER BY 1,2
 ;"
@@ -111,7 +114,7 @@ paged_table(db2)
 ```
 
 ```{r, message = FALSE, warning = FALSE}
-plot2 <- ggplot(data = db2, aes(x = decade, y = Funding)) +
+plot2 <- ggplot(data = db2, aes(x = decade, y = gross_income)) +
   geom_line() +
   facet_wrap(~genre) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
