--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -117,7 +117,8 @@ paged_table(db2)
 plot2 <- ggplot(data = db2, aes(x = decade, y = gross_income)) +
   geom_line() +
   facet_wrap(~genre) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_y_continuous(labels = c("0", "200 Billion", "400 Billion", "600 Billion"))
 print(plot2)
 ```
 
