--- a/mp4.draft1.Rmd
+++ b/mp4.draft1.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(echo = TRUE)
 rmarkdown::paged_table
 ```
 
+*“I wish there was a way to know you're in the good old days before you've actually left them.” ― Andy Bernard (The Office)*
+
 ```{r, message = FALSE}
 library(tidyverse)
 library(RMySQL)
